# GestureGame

./: .gitignore  settings.gradle
MKitRenderer/: CMakeLists.txt  build.gradle
MKitRenderer/src/androidTest/java/org/gameplay3d/: ExampleInstrumentedTest.java
MKitRenderer/src/main/: AndroidManifest.xml
MKitRenderer/src/main/assets/: game.config
MKitRenderer/src/main/assets/res/common/forms/: ARCallLayout.form  FacilityMemoLayout.form  FacilityWorkLayout.form  MainControlLayout.form  TargetOn.form  ToastLayout.form  callSystemLayout.form  checkSheetBottom.form  checkSheetLeft.form  checkSheetRight.form  checkSheetTop.form  childImgTxtLayout.form  childSheetLayout.form  contentsTemplate.form  contextMenu2.form  formBasicControls.form  formSelect.form  formTest.form  globalMenu.form  globalMenu2.form  iconLayout.form  imageLayout.form  imagePages.form  layout1.form  layout2.form  layout3.form  mainHeaderLayout.form  shareImageLarge.form  shareImageSmall.form  systemLayout.form  systemLayout2.form  tagBottom.form  tagLeft.form  tagRight.form  tagTop.form  textLayout.form
MKitRenderer/src/main/assets/res/shaders/: unlit_texture.frag
MKitRenderer/src/main/assets/res/ui/: default.theme  default1.theme  default2.theme
MKitRenderer/src/main/java/com/kt/renderobject/: ARComplexViewer.java  ARContentItem.java  ARContentList.java  ARContextMenu.java  ARMenuItem.java
MKitRenderer/src/main/java/com/kt/util/: LibraryHelper.java
MKitRenderer/src/main/java/com/maxst/mkit/: Listener.java  MKitJni.java  MKitJniHelper.java  MKitUtils.java  TrackingResultCallback.java
Renderer/: ARNodeContainer.cpp  ARNodeContainer.h  ARSearchNode.cpp  ARSearchNode.h  AndroidHelper.cpp  AndroidHelper.h  AndroidVideoPlayer.cpp  AndroidVideoPlayer.h  BackgroundCameraQuad.cpp  BackgroundCameraQuad.h  BackgroundRgbCameraQuad.cpp  BackgroundRgbCameraQuad.h  BackgroundYuvCameraQuad.cpp  BackgroundYuvCameraQuad.h  ChildLayoutFormNode.cpp  ChildLayoutFormNode.h  DummyHelper.cpp  DummyHelper.h  FormNode.cpp  FormNode.h  IconLayoutFormNode.cpp  IconLayoutFormNode.h  ImageNode.cpp  ImageNode.h  Layout1FormNode.cpp  Layout1FormNode.h  Layout2FormNode.cpp  Layout2FormNode.h  Layout3FormNode.cpp  Layout3FormNode.h  MKitHelper.cpp  MKitHelper.h  MKitJni.cpp  MKitRendererManager.cpp  MKitRendererManager.h  MonoRenderer.cpp  MonoRenderer.h  QuadNode.cpp  QuadNode.h  SearchingIndicatorNode.cpp  (+18 more)
Renderer/control/: AndroidSystemLayout.cpp  AndroidSystemLayout.h  AndroidWebView.cpp  AndroidWebView.h  SystemLayout.h  ToastState.cpp  ToastState.h  WebView.h
Renderer/filter/: LowPassFilter.cpp  LowPassFilter.h
Renderer/model/: ARComplexViewer.cpp  ARComplexViewer.h  ToastMessage.cpp  ToastMessage.h
Renderer/node/: ARComplexViewerNode.cpp  ARComplexViewerNode.h  ARMainControlNode.cpp  ARMainControlNode.h  ARToastNode.cpp  ARToastNode.h  ContextMenuFormNode.cpp  ContextMenuFormNode.h  ExtensionRenderable.cpp  ExtensionRenderable.h  GlobalMenuLayoutFormNode.cpp  GlobalMenuLayoutFormNode.h  ImageLayoutFormNode.cpp  ImageLayoutFormNode.h  ImagePagesFormNode.cpp  ImagePagesFormNode.h  MainControlFormNode.cpp  MainControlFormNode.h  SystemLayoutFormNode.cpp  SystemLayoutFormNode.h  SystemLayoutNode.cpp  SystemLayoutNode.h  TargetOnFormNode.cpp  TargetOnFormNode.h  TemplateFormNode.cpp  TemplateFormNode.h  TemplateVideoNode.cpp  TemplateVideoNode.h  ToastFormNode.cpp  ToastFormNode.h  WebViewNode.cpp  WebViewNode.h
Renderer/utility/: FormUtility.cpp  FormUtility.h  ImageHelper.cpp  ImageHelper.h  NodeUtility.cpp  NodeUtility.h
app/: build.gradle
app/src/main/: AndroidManifest.xml
(+27 files in other folders)
